# ai-tutor

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  README.md  docker-compose.yml  pyproject.toml  swagger.yaml
.github/workflows/: PR Check.yml  backend-tests.yml
backend/: Dockerfile  README.md  pyproject.toml  testing.md
backend/src/app/: main.py
backend/src/app/core/: database.py  encrypt.py  gemini.py  settings.py
backend/src/app/models/: course.py  file.py  user.py
backend/src/app/repository/: chat_message.py
backend/src/app/routes/: file.py  user.py  video_generation.py
backend/src/app/schemas/: course.py  user.py  video_generation.py
backend/src/app/services/: auth_token.py  chat_message.py  course.py  file.py  google_drive.py  tutor_session.py  user.py  video_generation.py
backend/src/tests/: README.md  base.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/videos/: page.tsx
frontend/components/: CreateClassModal.tsx  Sidebar.tsx
frontend/components/ui/: button-colorful.tsx
frontend/contexts/: DarkModeContext.tsx
frontend/hooks/: useDarkMode.ts
frontend/lib/: api.ts
src/app/: main.py
src/app/core/: dependencies.py  encrypt.py  google_auth.py  settings.py
src/app/models/: auth_token.py  chat_message.py  course.py  file.py  tutor_session.py  user.py
src/app/repository/: chat_message.py  course.py  file.py  tutor_session.py  user.py
src/app/routes/: chat_message.py  course.py  file.py  google_drive.py  tutor_session.py  user.py  video_generation.py
src/app/schemas/: chat_message.py  course.py  file.py  tutor_session.py  user.py  video_generation.py
src/app/services/: auth_token.py  chat_message.py  course.py  file.py  google_drive.py  tutor_session.py  user.py  video_generation.py
(+18 files in other folders)
