[project]
name = "ai-tutor"
version = "0.1.0"
description = "Smart personalized tutor for google docs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.bandit]
exclude = ["tests", "venv", "src/__pycache__"]
